[gd_scene load_steps=25 format=3 uid="uid://bojim1cxoxcip"]

[ext_resource type="Script" uid="uid://cb1ov43it3fvx" path="res://Scenes/Pre-Day/pre_day.gd" id="1_5kk28"]
[ext_resource type="Texture2D" uid="uid://bbhmx0npppdkg" path="res://Assets/Backgrounds/Tindahan_CLOSED.png" id="2_kyykf"]
[ext_resource type="Texture2D" uid="uid://c1ybhasq575ce" path="res://Assets/Items/listahan.png" id="3_wendk"]
[ext_resource type="Script" uid="uid://dj0wbu1wuy7uq" path="res://Scenes/Pre-Day/listahan.gd" id="4_npyhy"]
[ext_resource type="Script" uid="uid://dh725w266r5ba" path="res://Scenes/Pre-Day/day_start.gd" id="5_8xfpq"]
[ext_resource type="Texture2D" uid="uid://ck4ukunpnf6ug" path="res://Assets/Items/recbook_tom.png" id="7_kyykf"]
[ext_resource type="Script" uid="uid://c585uie58f7ri" path="res://Scenes/Pre-Day/notebook.gd" id="7_tcj3e"]
[ext_resource type="Script" uid="uid://257rxww5gcxm" path="res://Scenes/Pre-Day/nb_chars/ace_nb.gd" id="8_sg8gv"]
[ext_resource type="Script" uid="uid://bli70xvqt5e5m" path="res://Scenes/Pre-Day/nb_chars/tam_nb.gd" id="9_kyykf"]
[ext_resource type="Script" uid="uid://brj58wkwya5xa" path="res://Scenes/Pre-Day/nb_chars/deon_nb.gd" id="10_tcj3e"]
[ext_resource type="Script" uid="uid://gbce6ebe6mrx" path="res://Scenes/Pre-Day/nb_chars/jan_nb.gd" id="11_xjedd"]
[ext_resource type="Script" uid="uid://dhmp0r1ypspvl" path="res://Scenes/Pre-Day/nb_chars/koopa_nb.gd" id="12_qjbf2"]
[ext_resource type="Script" uid="uid://dlaibviu302j6" path="res://Scenes/Pre-Day/tom.gd" id="13_tcj3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atbon"]
size = Vector2(147.5, 211.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sg8gv"]
size = Vector2(131.333, 365.333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wendk"]
size = Vector2(164.667, 392)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npyhy"]
size = Vector2(363.333, 69.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xfpq"]
size = Vector2(357.667, 31.3334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kk28"]
size = Vector2(75.6667, 66.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyykf"]
size = Vector2(70, 69.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcj3e"]
size = Vector2(69.9167, 64.1667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjedd"]
size = Vector2(64.6667, 66.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjbf2"]
size = Vector2(73, 65.1666)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wffjy"]
size = Vector2(74.3333, 69.3333)

[node name="Pre-Day" type="Node2D"]
script = ExtResource("1_5kk28")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Tindahan" type="TextureRect" parent="CanvasLayer"]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kyykf")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Listahan" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wendk")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="CanvasLayer"]
script = ExtResource("4_npyhy")

[node name="notebook" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(1423.25, 830.375)
shape = SubResource("RectangleShape2D_atbon")

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -15.5
offset_right = 62.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00379, 1)
text = "Open the store"
script = ExtResource("5_8xfpq")
metadata/_edit_use_anchors_ = true

[node name="Area2D2" type="Area2D" parent="CanvasLayer"]
visible = false
position = Vector2(1182, 475)
scale = Vector2(3, 3)
script = ExtResource("7_tcj3e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Area2D2"]
position = Vector2(-330, 24)
shape = SubResource("RectangleShape2D_sg8gv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CanvasLayer/Area2D2"]
position = Vector2(172.333, 28.3333)
shape = SubResource("RectangleShape2D_wendk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CanvasLayer/Area2D2"]
position = Vector2(-83.6667, 174.667)
shape = SubResource("RectangleShape2D_npyhy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CanvasLayer/Area2D2"]
position = Vector2(-82.5, -152.667)
shape = SubResource("RectangleShape2D_8xfpq")

[node name="Notes" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(1182, 475)
scale = Vector2(3, 3)
texture = ExtResource("7_kyykf")

[node name="ace" type="Area2D" parent="CanvasLayer/Notes"]
script = ExtResource("8_sg8gv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Notes/ace"]
position = Vector2(-155.167, -60.5)
shape = SubResource("RectangleShape2D_5kk28")
debug_color = Color(0.85692, 0.249775, 0.671723, 0.42)

[node name="tam" type="Area2D" parent="CanvasLayer/Notes"]
script = ExtResource("9_kyykf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Notes/tam"]
position = Vector2(-205, 21.5)
shape = SubResource("RectangleShape2D_kyykf")
debug_color = Color(0.858824, 0.25098, 0.670588, 0.419608)

[node name="deon" type="Area2D" parent="CanvasLayer/Notes"]
script = ExtResource("10_tcj3e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Notes/deon"]
position = Vector2(-92.625, 92.25)
shape = SubResource("RectangleShape2D_tcj3e")
debug_color = Color(0.858824, 0.25098, 0.670588, 0.419608)

[node name="dan" type="Area2D" parent="CanvasLayer/Notes"]
script = ExtResource("11_xjedd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Notes/dan"]
position = Vector2(-23.6667, -58.6667)
shape = SubResource("RectangleShape2D_xjedd")
debug_color = Color(0.858824, 0.25098, 0.670588, 0.419608)

[node name="koopa" type="Area2D" parent="CanvasLayer/Notes"]
script = ExtResource("12_qjbf2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Notes/koopa"]
position = Vector2(19.3333, 27.75)
shape = SubResource("RectangleShape2D_qjbf2")
debug_color = Color(0.858824, 0.25098, 0.670588, 0.419608)

[node name="tom" type="Area2D" parent="CanvasLayer/Notes"]
script = ExtResource("13_tcj3e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Notes/tom"]
position = Vector2(-91.8333, 15.6667)
shape = SubResource("RectangleShape2D_wffjy")
debug_color = Color(0.858824, 0.25098, 0.670588, 0.419608)

[connection signal="input_event" from="CanvasLayer/Area2D" to="CanvasLayer/Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Area2D" to="CanvasLayer/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Area2D" to="CanvasLayer/Area2D" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer/Button" method="_on_pressed"]
[connection signal="input_event" from="CanvasLayer/Area2D2" to="CanvasLayer/Area2D2" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Notes/ace" to="CanvasLayer/Notes/ace" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Notes/tam" to="CanvasLayer/Notes/tam" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Notes/deon" to="CanvasLayer/Notes/deon" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Notes/dan" to="CanvasLayer/Notes/dan" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Notes/koopa" to="CanvasLayer/Notes/koopa" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Notes/tom" to="CanvasLayer/Notes/tom" method="_on_input_event"]
